// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pact > v1 > can be serialised 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "definitions": {
    "headers": {
      "$id": "#/definitions/headers",
      "anyOf": [
        {
          "patternProperties": {
            "^(.*)$": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
        {
          "patternProperties": {
            "^(.*)$": {
              "items": {
                "type": "string",
                Symbol(TypeBox.Kind): "String",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
      ],
      Symbol(TypeBox.Kind): "Union",
    },
    "interaction": {
      "$id": "#/definitions/interaction",
      "additionalProperties": false,
      "properties": {
        "description": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "providerState": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "provider_state": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "request": {
          "$ref": "#/definitions/request",
          Symbol(TypeBox.Kind): "Ref",
        },
        "response": {
          "$ref": "#/definitions/response",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "required": [
        "description",
        "request",
        "response",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "interactions": {
      "$id": "#/definitions/interactions",
      "items": {
        "$ref": "#/definitions/interaction",
        Symbol(TypeBox.Kind): "Ref",
      },
      "type": "array",
      Symbol(TypeBox.Kind): "Array",
    },
    "metadata": {
      "$id": "#/definitions/metadata",
      "properties": {
        "pact-specification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecificationVersion": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "pacticipant": {
      "$id": "#/definitions/pacticipant",
      "properties": {
        "name": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "request": {
      "$id": "#/definitions/request",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "method": {
          "enum": [
            "connect",
            "CONNECT",
            "delete",
            "DELETE",
            "get",
            "GET",
            "head",
            "HEAD",
            "options",
            "OPTIONS",
            "post",
            "POST",
            "put",
            "PUT",
            "trace",
            "TRACE",
          ],
          "type": "string",
          Symbol(TypeBox.Kind): "Unsafe",
        },
        "path": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "query": {
          "pattern": "^$|^[^=&]+=[^=&]+&?$|^[^=&]+=[^=&]+(&[^=&]+=[^=&]+)*&?$",
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "method",
        "path",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "response": {
      "$id": "#/definitions/response",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "status": {
          "maximum": 599,
          "minimum": 100,
          "type": "integer",
          Symbol(TypeBox.Kind): "Integer",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
  },
  "description": "Schema for a Pact file",
  "properties": {
    "consumer": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
    "interactions": {
      "$ref": "#/definitions/interactions",
      Symbol(TypeBox.Kind): "Ref",
    },
    "metadata": {
      "$ref": "#/definitions/metadata",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "provider": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
  },
  "required": [
    "consumer",
    "interactions",
    "provider",
  ],
  "title": "Pact V1",
  "type": "object",
  Symbol(TypeBox.Kind): "Object",
}
`;

exports[`Pact > v2 > can be serialised 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "definitions": {
    "headers": {
      "$id": "#/definitions/headers",
      "anyOf": [
        {
          "patternProperties": {
            "^(.*)$": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
        {
          "patternProperties": {
            "^(.*)$": {
              "items": {
                "type": "string",
                Symbol(TypeBox.Kind): "String",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
      ],
      Symbol(TypeBox.Kind): "Union",
    },
    "interaction": {
      "additionalProperties": false,
      "properties": {
        "description": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "providerState": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "request": {
          "$ref": "#/definitions/request",
          Symbol(TypeBox.Kind): "Ref",
        },
        "response": {
          "$ref": "#/definitions/response",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "required": [
        "description",
        "request",
        "response",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "interactions": {
      "$id": "#/definitions/interactions",
      "items": {
        "$ref": "#/definitions/interaction",
        Symbol(TypeBox.Kind): "Ref",
      },
      "type": "array",
      Symbol(TypeBox.Kind): "Array",
    },
    "matchRegex": {
      "$id": "#/definitions/matchRegex",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "regex",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "regex",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchType": {
      "$id": "#/definitions/matchType",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "type",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "max": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
        "min": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchingRules": {
      "$id": "#/definitions/matchingRules",
      "additionalProperties": false,
      "patternProperties": {
        "^\\$.*$": {
          "oneOf": [
            {
              "$ref": "#/definitions/matchRegex",
              Symbol(TypeBox.Kind): "Ref",
            },
            {
              "$ref": "#/definitions/matchType",
              Symbol(TypeBox.Kind): "Ref",
            },
          ],
          Symbol(TypeBox.Kind): "Unsafe",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "metadata": {
      "$id": "#/definitions/metadata",
      "properties": {
        "pact-specification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecificationVersion": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "pacticipant": {
      "$id": "#/definitions/pacticipant",
      "properties": {
        "name": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "request": {
      "$id": "#/definitions/request",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "method": {
          "enum": [
            "connect",
            "CONNECT",
            "delete",
            "DELETE",
            "get",
            "GET",
            "head",
            "HEAD",
            "options",
            "OPTIONS",
            "post",
            "POST",
            "put",
            "PUT",
            "trace",
            "TRACE",
          ],
          "type": "string",
          Symbol(TypeBox.Kind): "Unsafe",
        },
        "path": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "query": {
          "pattern": "^$|^[^=&]+=[^=&]+&?$|^[^=&]+=[^=&]+(&[^=&]+=[^=&]+)*&?$",
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "method",
        "path",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "response": {
      "$id": "#/definitions/response",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "status": {
          "maximum": 599,
          "minimum": 100,
          "type": "integer",
          Symbol(TypeBox.Kind): "Integer",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
  },
  "description": "Schema for a Pact file",
  "properties": {
    "consumer": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
    "interactions": {
      "$ref": "#/definitions/interactions",
      Symbol(TypeBox.Kind): "Ref",
    },
    "metadata": {
      "$ref": "#/definitions/metadata",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "provider": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
  },
  "required": [
    "consumer",
    "interactions",
    "provider",
  ],
  "title": "Pact V2",
  "type": "object",
  Symbol(TypeBox.Kind): "Object",
}
`;

exports[`Pact > v3 > can be serialised 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "definitions": {
    "bodyGenerator": {
      "$id": "#/definitions/bodyGenerator",
      "additionalProperties": false,
      "patternProperties": {
        "^\\$.*$": {
          "$ref": "#/definitions/generator",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "bodyMatcher": {
      "$id": "#/definitions/bodyMatcher",
      "patternProperties": {
        "^\\$.*$": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "genDate": {
      "$id": "#/definitions/genDate",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "Date",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genDateTime": {
      "$id": "#/definitions/genDateTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "DateTime",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomBoolean": {
      "$id": "#/definitions/genRandomBoolean",
      "additionalProperties": false,
      "properties": {
        "type": {
          "const": "RandomBoolean",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomDecimal": {
      "$id": "#/definitions/genRandomDecimal",
      "additionalProperties": false,
      "properties": {
        "digits": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomDecimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "digits",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomHexadecimal": {
      "$id": "#/definitions/genRandomHexadecimal",
      "additionalProperties": false,
      "properties": {
        "digits": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomHexadecimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "digits",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomInt": {
      "$id": "#/definitions/genRandomInt",
      "additionalProperties": false,
      "properties": {
        "max": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "min": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomInt",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "min",
        "max",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomString": {
      "$id": "#/definitions/genRandomString",
      "additionalProperties": false,
      "properties": {
        "size": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomString",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "size",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRegex": {
      "$id": "#/definitions/genRegex",
      "additionalProperties": false,
      "properties": {
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "type": {
          "const": "Regex",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "regex",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genTime": {
      "$id": "#/definitions/genTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "Time",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genUuid": {
      "$id": "#/definitions/genUuid",
      "additionalProperties": false,
      "properties": {
        "type": {
          "const": "Uuid",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "generator": {
      "$id": "#/definitions/generator",
      "oneOf": [
        {
          "$ref": "#/definitions/genDate",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genDateTime",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomBoolean",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomDecimal",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomHexadecimal",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomInt",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomString",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRegex",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genTime",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genUuid",
          Symbol(TypeBox.Kind): "Ref",
        },
      ],
      Symbol(TypeBox.Kind): "Unsafe",
    },
    "headers": {
      "$id": "#/definitions/headers",
      "anyOf": [
        {
          "patternProperties": {
            "^(.*)$": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
        {
          "patternProperties": {
            "^(.*)$": {
              "items": {
                "type": "string",
                Symbol(TypeBox.Kind): "String",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
      ],
      Symbol(TypeBox.Kind): "Union",
    },
    "interaction": {
      "$id": "#/definitions/interaction",
      "additionalProperties": false,
      "properties": {
        "description": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "providerStates": {
          "anyOf": [
            {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
            {
              "items": {
                "properties": {
                  "name": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "params": {
                    "patternProperties": {
                      "^(.*)$": {
                        Symbol(TypeBox.Kind): "Unknown",
                      },
                    },
                    "type": "object",
                    Symbol(TypeBox.Kind): "Record",
                    Symbol(TypeBox.Optional): "Optional",
                  },
                },
                "required": [
                  "name",
                ],
                "type": "object",
                Symbol(TypeBox.Kind): "Object",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
          Symbol(TypeBox.Optional): "Optional",
        },
        "request": {
          "$ref": "#/definitions/request",
          Symbol(TypeBox.Kind): "Ref",
        },
        "response": {
          "$ref": "#/definitions/response",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "required": [
        "description",
        "request",
        "response",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "interactions": {
      "$id": "#/definitions/interactions",
      "items": {
        "$ref": "#/definitions/interaction",
        Symbol(TypeBox.Kind): "Ref",
      },
      "type": "array",
      Symbol(TypeBox.Kind): "Array",
    },
    "matchBoolean": {
      "$id": "#/definitions/matchBoolean",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "boolean",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchContentType": {
      "$id": "#/definitions/matchContentType",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "contentType",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "value": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDate": {
      "$id": "#/definitions/matchDate",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "date",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDatetime": {
      "$id": "#/definitions/matchDatetime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "datetime",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDecimal": {
      "$id": "#/definitions/matchDecimal",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "decimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchEquality": {
      "$id": "#/definitions/matchEquality",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "equality",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchInclude": {
      "$id": "#/definitions/matchInclude",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "include",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "value": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchInteger": {
      "$id": "#/definitions/matchInteger",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "integer",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchNull": {
      "$id": "#/definitions/matchNull",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "null",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchNumber": {
      "$id": "#/definitions/matchNumber",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "number",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchRegex": {
      "$id": "#/definitions/matchRegex",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "regex",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "regex",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchTime": {
      "$id": "#/definitions/matchTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "time",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchType": {
      "$id": "#/definitions/matchType",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "type",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "max": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
        "min": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchValues": {
      "$id": "#/definitions/matchValues",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "values",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchers": {
      "$id": "#/definitions/matchers",
      "additionalProperties": false,
      "properties": {
        "combine": {
          "anyOf": [
            {
              "const": "AND",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "OR",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchers": {
          "items": {
            "anyOf": [
              {
                "$ref": "#/definitions/matchRegex",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchType",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchBoolean",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchContentType",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDate",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDatetime",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDecimal",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchEquality",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchInclude",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchInteger",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchNull",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchNumber",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchTime",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchValues",
                Symbol(TypeBox.Kind): "Ref",
              },
            ],
            Symbol(TypeBox.Kind): "Union",
          },
          "type": "array",
          Symbol(TypeBox.Kind): "Array",
        },
      },
      "required": [
        "matchers",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchingRules": {
      "$id": "#/definitions/matchingRules",
      "additionalProperties": false,
      "properties": {
        "body": {
          "$ref": "#/definitions/bodyMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "header": {
          "$ref": "#/definitions/recordMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "path": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "query": {
          "$ref": "#/definitions/recordMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "message": {
      "$id": "#/definitions/message",
      "additionalProperties": false,
      "properties": {
        "contents": {
          Symbol(TypeBox.Kind): "Unknown",
        },
        "description": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "generators": {
          "additionalProperties": false,
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "metadata": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "additionalProperties": false,
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyMatcher",
              Symbol(TypeBox.Kind): "Ref",
            },
          },
          "required": [
            "body",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "metaData": {
          "patternProperties": {
            "^(.*)$": {
              Symbol(TypeBox.Kind): "Unknown",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
          Symbol(TypeBox.Optional): "Optional",
        },
        "metadata": {
          "patternProperties": {
            "^(.*)$": {
              Symbol(TypeBox.Kind): "Unknown",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
          Symbol(TypeBox.Optional): "Optional",
        },
        "providerState": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "contents",
        "description",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "messages": {
      "$id": "#/definitions/messages",
      "items": {
        "$ref": "#/definitions/message",
        Symbol(TypeBox.Kind): "Ref",
      },
      "type": "array",
      Symbol(TypeBox.Kind): "Array",
    },
    "metadata": {
      "$id": "#/definitions/metadata",
      "properties": {
        "pact-specification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "pactSpecificationVersion": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "pacticipant": {
      "$id": "#/definitions/pacticipant",
      "properties": {
        "name": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "recordGenerator": {
      "$id": "#/definitions/recordGenerator",
      "additionalProperties": false,
      "patternProperties": {
        "^(.*)$": {
          "$ref": "#/definitions/generator",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "recordMatcher": {
      "$id": "#/definitions/recordMatcher",
      "patternProperties": {
        "^(.*)$": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "request": {
      "$id": "#/definitions/request",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "generators": {
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "headers": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "path": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "query": {
              "$ref": "#/definitions/generator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "method": {
          "enum": [
            "connect",
            "CONNECT",
            "delete",
            "DELETE",
            "get",
            "GET",
            "head",
            "HEAD",
            "options",
            "OPTIONS",
            "post",
            "POST",
            "put",
            "PUT",
            "trace",
            "TRACE",
          ],
          "type": "string",
          Symbol(TypeBox.Kind): "Unsafe",
        },
        "path": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "query": {
          "anyOf": [
            {
              "patternProperties": {
                "^(.*)$": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
            },
            {
              "patternProperties": {
                "^(.*)$": {
                  "items": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "method",
        "path",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "response": {
      "$id": "#/definitions/response",
      "additionalProperties": false,
      "properties": {
        "body": {
          Symbol(TypeBox.Kind): "Unknown",
          Symbol(TypeBox.Optional): "Optional",
        },
        "generators": {
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "headers": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "status": {
              "$ref": "#/definitions/generator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "status": {
          "maximum": 599,
          "minimum": 100,
          "type": "integer",
          Symbol(TypeBox.Kind): "Integer",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
  },
  "description": "Schema for a Pact file",
  "properties": {
    "consumer": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
    "interactions": {
      "$ref": "#/definitions/interactions",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "messages": {
      "$ref": "#/definitions/messages",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "metadata": {
      "$ref": "#/definitions/metadata",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "provider": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
  },
  "required": [
    "consumer",
    "provider",
  ],
  "title": "Pact V3",
  "type": "object",
  Symbol(TypeBox.Kind): "Object",
}
`;

exports[`Pact > v4 > can be serialised 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "definitions": {
    "body": {
      "$id": "#/definitions/body",
      "additionalProperties": false,
      "properties": {
        "content": {
          "anyOf": [
            {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
            {
              Symbol(TypeBox.Kind): "Unknown",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
        },
        "contentType": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "contentTypeHint": {
          "anyOf": [
            {
              "const": "BINARY",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "TEXT",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
        },
        "encoded": {
          "anyOf": [
            {
              "type": "boolean",
              Symbol(TypeBox.Kind): "Boolean",
            },
            {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
        },
      },
      "required": [
        "content",
        "contentType",
        "contentTypeHint",
        "encoded",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "bodyGenerator": {
      "$id": "#/definitions/bodyGenerator",
      "additionalProperties": false,
      "patternProperties": {
        "^\\$.*$": {
          "$ref": "#/definitions/generator",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "bodyMatcher": {
      "$id": "#/definitions/bodyMatcher",
      "patternProperties": {
        "^\\$.*$": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "genDate": {
      "$id": "#/definitions/genDate",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "Date",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genDateTime": {
      "$id": "#/definitions/genDateTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "DateTime",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genMockServerURL": {
      "$id": "#/definitions/genMockServerURL",
      "additionalProperties": false,
      "properties": {
        "example": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "type": {
          "const": "MockServerURL",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "regex",
        "example",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genProviderState": {
      "$id": "#/definitions/genProviderState",
      "additionalProperties": false,
      "properties": {
        "expression": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "type": {
          "const": "ProviderState",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "expression",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomBoolean": {
      "$id": "#/definitions/genRandomBoolean",
      "additionalProperties": false,
      "properties": {
        "type": {
          "const": "RandomBoolean",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomDecimal": {
      "$id": "#/definitions/genRandomDecimal",
      "additionalProperties": false,
      "properties": {
        "digits": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomDecimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "digits",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomHexadecimal": {
      "$id": "#/definitions/genRandomHexadecimal",
      "additionalProperties": false,
      "properties": {
        "digits": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomHexadecimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "digits",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomInt": {
      "$id": "#/definitions/genRandomInt",
      "additionalProperties": false,
      "properties": {
        "max": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "min": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomInt",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "min",
        "max",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRandomString": {
      "$id": "#/definitions/genRandomString",
      "additionalProperties": false,
      "properties": {
        "size": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
        },
        "type": {
          "const": "RandomString",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "size",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genRegex": {
      "$id": "#/definitions/genRegex",
      "additionalProperties": false,
      "properties": {
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "type": {
          "const": "Regex",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "regex",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genTime": {
      "$id": "#/definitions/genTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
          Symbol(TypeBox.Optional): "Optional",
        },
        "type": {
          "const": "Time",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genUuid": {
      "$id": "#/definitions/genUuid",
      "additionalProperties": false,
      "properties": {
        "type": {
          "const": "Uuid",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "genUuidFormat": {
      "$id": "#/definitions/genUuidFormat",
      "additionalProperties": false,
      "properties": {
        "format": {
          "anyOf": [
            {
              "const": "simple",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "lower-case-hyphenated",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "upper-case-hyphenated",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "URN",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
        },
        "type": {
          "const": "Uuid",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "type",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "generator": {
      "$id": "#/definitions/generator",
      "oneOf": [
        {
          "$ref": "#/definitions/genDate",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genDateTime",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomBoolean",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomDecimal",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomHexadecimal",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomInt",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRandomString",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genRegex",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genTime",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genUuid",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genMockServerURL",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genProviderState",
          Symbol(TypeBox.Kind): "Ref",
        },
        {
          "$ref": "#/definitions/genUuidFormat",
          Symbol(TypeBox.Kind): "Ref",
        },
      ],
      Symbol(TypeBox.Kind): "Unsafe",
    },
    "headers": {
      "$id": "#/definitions/headers",
      "anyOf": [
        {
          "patternProperties": {
            "^(.*)$": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
        {
          "patternProperties": {
            "^(.*)$": {
              "items": {
                "type": "string",
                Symbol(TypeBox.Kind): "String",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
        },
      ],
      Symbol(TypeBox.Kind): "Union",
    },
    "interaction": {
      "$id": "#/definitions/interaction",
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "comments": {
              "properties": {
                "testname": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                  Symbol(TypeBox.Optional): "Optional",
                },
                "text": {
                  "items": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                  Symbol(TypeBox.Optional): "Optional",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "description": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
            "interactionMarkup": {
              "additionalProperties": false,
              "properties": {
                "markup": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                "markupType": {
                  "anyOf": [
                    {
                      "const": "COMMON_MARK",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                    {
                      "const": "HTML",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                  ],
                  Symbol(TypeBox.Kind): "Union",
                },
              },
              "required": [
                "markup",
                "markupType",
              ],
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "key": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pending": {
              "type": "boolean",
              Symbol(TypeBox.Kind): "Boolean",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pluginConfiguration": {
              "patternProperties": {
                "^(.*)$": {
                  "patternProperties": {
                    "^(.*)$": {
                      Symbol(TypeBox.Kind): "Unknown",
                    },
                  },
                  "type": "object",
                  Symbol(TypeBox.Kind): "Record",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
              Symbol(TypeBox.Optional): "Optional",
            },
            "providerStates": {
              "anyOf": [
                {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                {
                  "items": {
                    "properties": {
                      "name": {
                        "type": "string",
                        Symbol(TypeBox.Kind): "String",
                      },
                      "params": {
                        "patternProperties": {
                          "^(.*)$": {
                            Symbol(TypeBox.Kind): "Unknown",
                          },
                        },
                        "type": "object",
                        Symbol(TypeBox.Kind): "Record",
                        Symbol(TypeBox.Optional): "Optional",
                      },
                    },
                    "required": [
                      "name",
                    ],
                    "type": "object",
                    Symbol(TypeBox.Kind): "Object",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                },
              ],
              Symbol(TypeBox.Kind): "Union",
              Symbol(TypeBox.Optional): "Optional",
            },
            "request": {
              "$ref": "#/definitions/request",
              Symbol(TypeBox.Kind): "Ref",
            },
            "response": {
              "$ref": "#/definitions/response",
              Symbol(TypeBox.Kind): "Ref",
            },
            "type": {
              "const": "Synchronous/HTTP",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          },
          "required": [
            "description",
            "request",
            "response",
            "type",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "comments": {
              "properties": {
                "testname": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                  Symbol(TypeBox.Optional): "Optional",
                },
                "text": {
                  "items": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                  Symbol(TypeBox.Optional): "Optional",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "contents": {
              Symbol(TypeBox.Kind): "Unknown",
            },
            "description": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
            "generators": {
              "additionalProperties": false,
              "properties": {
                "body": {
                  "$ref": "#/definitions/bodyGenerator",
                  Symbol(TypeBox.Kind): "Ref",
                  Symbol(TypeBox.Optional): "Optional",
                },
                "metadata": {
                  "$ref": "#/definitions/recordGenerator",
                  Symbol(TypeBox.Kind): "Ref",
                  Symbol(TypeBox.Optional): "Optional",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "interactionMarkup": {
              "additionalProperties": false,
              "properties": {
                "markup": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                "markupType": {
                  "anyOf": [
                    {
                      "const": "COMMON_MARK",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                    {
                      "const": "HTML",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                  ],
                  Symbol(TypeBox.Kind): "Union",
                },
              },
              "required": [
                "markup",
                "markupType",
              ],
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "key": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
              Symbol(TypeBox.Optional): "Optional",
            },
            "matchingRules": {
              "additionalProperties": false,
              "properties": {
                "body": {
                  "$ref": "#/definitions/bodyMatcher",
                  Symbol(TypeBox.Kind): "Ref",
                },
              },
              "required": [
                "body",
              ],
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "metaData": {
              "patternProperties": {
                "^(.*)$": {
                  Symbol(TypeBox.Kind): "Unknown",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
              Symbol(TypeBox.Optional): "Optional",
            },
            "metadata": {
              "patternProperties": {
                "^(.*)$": {
                  Symbol(TypeBox.Kind): "Unknown",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pending": {
              "type": "boolean",
              Symbol(TypeBox.Kind): "Boolean",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pluginConfiguration": {
              "patternProperties": {
                "^(.*)$": {
                  "patternProperties": {
                    "^(.*)$": {
                      Symbol(TypeBox.Kind): "Unknown",
                    },
                  },
                  "type": "object",
                  Symbol(TypeBox.Kind): "Record",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
              Symbol(TypeBox.Optional): "Optional",
            },
            "providerStates": {
              "anyOf": [
                {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                {
                  "items": {
                    "properties": {
                      "name": {
                        "type": "string",
                        Symbol(TypeBox.Kind): "String",
                      },
                      "params": {
                        "patternProperties": {
                          "^(.*)$": {
                            Symbol(TypeBox.Kind): "Unknown",
                          },
                        },
                        "type": "object",
                        Symbol(TypeBox.Kind): "Record",
                        Symbol(TypeBox.Optional): "Optional",
                      },
                    },
                    "required": [
                      "name",
                    ],
                    "type": "object",
                    Symbol(TypeBox.Kind): "Object",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                },
              ],
              Symbol(TypeBox.Kind): "Union",
              Symbol(TypeBox.Optional): "Optional",
            },
            "type": {
              "const": "Asynchronous/Messages",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          },
          "required": [
            "description",
            "contents",
            "type",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "comments": {
              "properties": {
                "testname": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                  Symbol(TypeBox.Optional): "Optional",
                },
                "text": {
                  "items": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                  Symbol(TypeBox.Optional): "Optional",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "description": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
            "interactionMarkup": {
              "additionalProperties": false,
              "properties": {
                "markup": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                "markupType": {
                  "anyOf": [
                    {
                      "const": "COMMON_MARK",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                    {
                      "const": "HTML",
                      "type": "string",
                      Symbol(TypeBox.Kind): "Literal",
                    },
                  ],
                  Symbol(TypeBox.Kind): "Union",
                },
              },
              "required": [
                "markup",
                "markupType",
              ],
              "type": "object",
              Symbol(TypeBox.Kind): "Object",
              Symbol(TypeBox.Optional): "Optional",
            },
            "key": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pending": {
              "type": "boolean",
              Symbol(TypeBox.Kind): "Boolean",
              Symbol(TypeBox.Optional): "Optional",
            },
            "pluginConfiguration": {
              "patternProperties": {
                "^(.*)$": {
                  "patternProperties": {
                    "^(.*)$": {
                      Symbol(TypeBox.Kind): "Unknown",
                    },
                  },
                  "type": "object",
                  Symbol(TypeBox.Kind): "Record",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
              Symbol(TypeBox.Optional): "Optional",
            },
            "providerStates": {
              "anyOf": [
                {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
                {
                  "items": {
                    "properties": {
                      "name": {
                        "type": "string",
                        Symbol(TypeBox.Kind): "String",
                      },
                      "params": {
                        "patternProperties": {
                          "^(.*)$": {
                            Symbol(TypeBox.Kind): "Unknown",
                          },
                        },
                        "type": "object",
                        Symbol(TypeBox.Kind): "Record",
                        Symbol(TypeBox.Optional): "Optional",
                      },
                    },
                    "required": [
                      "name",
                    ],
                    "type": "object",
                    Symbol(TypeBox.Kind): "Object",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                },
              ],
              Symbol(TypeBox.Kind): "Union",
              Symbol(TypeBox.Optional): "Optional",
            },
            "request": {
              "$ref": "#/definitions/messageContents",
              Symbol(TypeBox.Kind): "Ref",
            },
            "response": {
              "items": {
                "$ref": "#/definitions/messageContents",
                Symbol(TypeBox.Kind): "Ref",
              },
              "type": "array",
              Symbol(TypeBox.Kind): "Array",
            },
            "type": {
              "const": "Synchronous/Messages",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          },
          "required": [
            "description",
            "request",
            "response",
            "type",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
        },
      ],
      Symbol(TypeBox.Kind): "Union",
    },
    "interactions": {
      "$id": "#/definitions/interactions",
      "items": {
        "$ref": "#/definitions/interaction",
        Symbol(TypeBox.Kind): "Ref",
      },
      "type": "array",
      Symbol(TypeBox.Kind): "Array",
    },
    "matchArrayContains": {
      "$id": "#/definitions/matchArrayContains",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "arrayContains",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "variants": {
          "items": {
            Symbol(TypeBox.Kind): "Any",
          },
          "type": "array",
          Symbol(TypeBox.Kind): "Array",
        },
      },
      "required": [
        "match",
        "variants",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchBoolean": {
      "$id": "#/definitions/matchBoolean",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "boolean",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchContentType": {
      "$id": "#/definitions/matchContentType",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "contentType",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "value": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDate": {
      "$id": "#/definitions/matchDate",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "date",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDatetime": {
      "$id": "#/definitions/matchDatetime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "datetime",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchDecimal": {
      "$id": "#/definitions/matchDecimal",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "decimal",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchEachKey": {
      "$id": "#/definitions/matchEachKey",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "eachKey",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "rules": {
          "items": {
            Symbol(TypeBox.Kind): "Unknown",
          },
          "type": "array",
          Symbol(TypeBox.Kind): "Array",
        },
        "value": {
          "pattern": "^\\$.*$",
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "rules",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchEachValue": {
      "$id": "#/definitions/matchEachValue",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "eachValue",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "rules": {
          "items": {
            Symbol(TypeBox.Kind): "Unknown",
          },
          "type": "array",
          Symbol(TypeBox.Kind): "Array",
        },
        "value": {
          "pattern": "^\\$.*$",
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "rules",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchEquality": {
      "$id": "#/definitions/matchEquality",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "equality",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchInclude": {
      "$id": "#/definitions/matchInclude",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "include",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "value": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "value",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchInteger": {
      "$id": "#/definitions/matchInteger",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "integer",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchNotEmpty": {
      "$id": "#/definitions/matchNotEmpty",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "notEmpty",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchNull": {
      "$id": "#/definitions/matchNull",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "null",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchNumber": {
      "$id": "#/definitions/matchNumber",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "number",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchRegex": {
      "$id": "#/definitions/matchRegex",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "regex",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "regex": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "regex",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchSemver": {
      "$id": "#/definitions/matchSemver",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "semver",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchStatusCode": {
      "$id": "#/definitions/matchStatusCode",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "statusCode",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "status": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "match",
        "status",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchTime": {
      "$id": "#/definitions/matchTime",
      "additionalProperties": false,
      "properties": {
        "format": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "match": {
          "const": "time",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
        "format",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchType": {
      "$id": "#/definitions/matchType",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "type",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
        "max": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
        "min": {
          "type": "number",
          Symbol(TypeBox.Kind): "Number",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchValues": {
      "$id": "#/definitions/matchValues",
      "additionalProperties": false,
      "properties": {
        "match": {
          "const": "values",
          "type": "string",
          Symbol(TypeBox.Kind): "Literal",
        },
      },
      "required": [
        "match",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchers": {
      "$id": "#/definitions/matchers",
      "additionalProperties": false,
      "properties": {
        "combine": {
          "anyOf": [
            {
              "const": "AND",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
            {
              "const": "OR",
              "type": "string",
              Symbol(TypeBox.Kind): "Literal",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchers": {
          "items": {
            "anyOf": [
              {
                "$ref": "#/definitions/matchRegex",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchType",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchBoolean",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchContentType",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDate",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDatetime",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchDecimal",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchEquality",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchInclude",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchInteger",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchNull",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchNumber",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchTime",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchValues",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchArrayContains",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchEachKey",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchEachValue",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchNotEmpty",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchSemver",
                Symbol(TypeBox.Kind): "Ref",
              },
              {
                "$ref": "#/definitions/matchStatusCode",
                Symbol(TypeBox.Kind): "Ref",
              },
            ],
            Symbol(TypeBox.Kind): "Union",
          },
          "type": "array",
          Symbol(TypeBox.Kind): "Array",
        },
      },
      "required": [
        "matchers",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "matchingRules": {
      "$id": "#/definitions/matchingRules",
      "additionalProperties": false,
      "properties": {
        "body": {
          "$ref": "#/definitions/bodyMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "header": {
          "$ref": "#/definitions/recordMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "path": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "query": {
          "$ref": "#/definitions/recordMatcher",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "messageContents": {
      "$id": "#/definitions/messageContents",
      "additionalProperties": false,
      "properties": {
        "contents": {
          Symbol(TypeBox.Kind): "Unknown",
        },
        "generators": {
          "additionalProperties": false,
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "metadata": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "additionalProperties": false,
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyMatcher",
              Symbol(TypeBox.Kind): "Ref",
            },
          },
          "required": [
            "body",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "metaData": {
          "patternProperties": {
            "^(.*)$": {
              Symbol(TypeBox.Kind): "Unknown",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
          Symbol(TypeBox.Optional): "Optional",
        },
        "metadata": {
          "patternProperties": {
            "^(.*)$": {
              Symbol(TypeBox.Kind): "Unknown",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Record",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "contents",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "metadata": {
      "$id": "#/definitions/metadata",
      "properties": {
        "pactSpecification": {
          "additionalProperties": false,
          "properties": {
            "version": {
              "type": "string",
              Symbol(TypeBox.Kind): "String",
            },
          },
          "required": [
            "version",
          ],
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "pacticipant": {
      "$id": "#/definitions/pacticipant",
      "properties": {
        "name": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "recordGenerator": {
      "$id": "#/definitions/recordGenerator",
      "additionalProperties": false,
      "patternProperties": {
        "^(.*)$": {
          "$ref": "#/definitions/generator",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "recordMatcher": {
      "$id": "#/definitions/recordMatcher",
      "patternProperties": {
        "^(.*)$": {
          "$ref": "#/definitions/matchers",
          Symbol(TypeBox.Kind): "Ref",
        },
      },
      "type": "object",
      Symbol(TypeBox.Kind): "Record",
    },
    "request": {
      "$id": "#/definitions/request",
      "additionalProperties": false,
      "properties": {
        "body": {
          "$ref": "#/definitions/body",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "generators": {
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "headers": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "path": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "query": {
              "$ref": "#/definitions/generator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "method": {
          "enum": [
            "connect",
            "CONNECT",
            "delete",
            "DELETE",
            "get",
            "GET",
            "head",
            "HEAD",
            "options",
            "OPTIONS",
            "post",
            "POST",
            "put",
            "PUT",
            "trace",
            "TRACE",
          ],
          "type": "string",
          Symbol(TypeBox.Kind): "Unsafe",
        },
        "path": {
          "type": "string",
          Symbol(TypeBox.Kind): "String",
        },
        "query": {
          "anyOf": [
            {
              "patternProperties": {
                "^(.*)$": {
                  "type": "string",
                  Symbol(TypeBox.Kind): "String",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
            },
            {
              "patternProperties": {
                "^(.*)$": {
                  "items": {
                    "type": "string",
                    Symbol(TypeBox.Kind): "String",
                  },
                  "type": "array",
                  Symbol(TypeBox.Kind): "Array",
                },
              },
              "type": "object",
              Symbol(TypeBox.Kind): "Record",
            },
          ],
          Symbol(TypeBox.Kind): "Union",
          Symbol(TypeBox.Optional): "Optional",
        },
      },
      "required": [
        "method",
        "path",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
    "response": {
      "$id": "#/definitions/response",
      "additionalProperties": false,
      "properties": {
        "body": {
          "$ref": "#/definitions/body",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "generators": {
          "properties": {
            "body": {
              "$ref": "#/definitions/bodyGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "headers": {
              "$ref": "#/definitions/recordGenerator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
            "status": {
              "$ref": "#/definitions/generator",
              Symbol(TypeBox.Kind): "Ref",
              Symbol(TypeBox.Optional): "Optional",
            },
          },
          "type": "object",
          Symbol(TypeBox.Kind): "Object",
          Symbol(TypeBox.Optional): "Optional",
        },
        "headers": {
          "$ref": "#/definitions/headers",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "matchingRules": {
          "$ref": "#/definitions/matchingRules",
          Symbol(TypeBox.Kind): "Ref",
          Symbol(TypeBox.Optional): "Optional",
        },
        "status": {
          "maximum": 599,
          "minimum": 100,
          "type": "integer",
          Symbol(TypeBox.Kind): "Integer",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
      Symbol(TypeBox.Kind): "Object",
    },
  },
  "description": "Schema for a Pact file",
  "properties": {
    "consumer": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
    "interactions": {
      "$ref": "#/definitions/interactions",
      Symbol(TypeBox.Kind): "Ref",
    },
    "metadata": {
      "$ref": "#/definitions/metadata",
      Symbol(TypeBox.Kind): "Ref",
      Symbol(TypeBox.Optional): "Optional",
    },
    "provider": {
      "$ref": "#/definitions/pacticipant",
      Symbol(TypeBox.Kind): "Ref",
    },
  },
  "required": [
    "consumer",
    "interactions",
    "provider",
  ],
  "title": "Pact V4",
  "type": "object",
  Symbol(TypeBox.Kind): "Object",
}
`;
